test/errors/unsupportedAs1.compopts
--detailed-errors # unsupportedAs1-detailed.good
--no-detailed-errors # unsupportedAs1-brief.good
